# retrotool

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: config.toml.example
.github/workflows/: build.yml
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/format/: chunk.rs  cmdl.rs  foot.rs  ltpb.rs  mcon.rs  mod.rs  mtrl.rs  pack.rs  rfrm.rs  room.rs  txtr.rs
lib/src/util/: astc.rs  bcdec.rs  compression.rs  dds.rs  file.rs  lzss.rs  mod.rs  read.rs  templates.rs
lib/templates/mp1r/: root.json  root.schema.json  type.schema.json
lib/templates/mp1r/enums/: RenderTargetScene.json  WaterSortType.json
lib/templates/mp1r/objects/: Entity.json  PickupMP1.json  Render.json
lib/templates/mp1r/structs/: ActorParametersMP1.json  AnimationParametersMP1.json  ColorMP1.json  LightParametersMP1.json  MapInfoMP1.json  ModelLightingData.json  ScannableParametersMP1.json  VectorMP1.json  VisorParametersMP1.json
lib/templates/mp1r/typedefs/: RenderStaticModel.json
retrotool/: Cargo.toml
retrotool-gui/: Cargo.toml
retrotool-gui/assets/: custom_material.wgsl  papermill_diffuse_rgb9e5_zstd.ktx2
retrotool-gui/src/: loaders.rs  main.rs  material.rs
retrotool-gui/src/loaders/: lightprobe.rs  material.rs  mod.rs  modcon.rs  model.rs  package.rs  room.rs  texture.rs
retrotool-gui/src/render/: camera.rs  grid.rs  grid.wgsl  mod.rs  model.rs
retrotool-gui/src/tabs/: lightprobe.rs  mod.rs  modcon.rs  model.rs  project.rs  room.rs  splash.rs  templates.rs  texture.rs
retrotool/src/: argh_version.rs  main.rs
retrotool/src/cmd/: clsn.rs  cmdl.rs  fmv0.rs  mod.rs  pak.rs  txtr.rs
src/: main.rs
src/cmd/: clsn.rs  cmdl.rs  fmv0.rs  mod.rs  pak.rs  txtr.rs
src/format/: adir.rs  chunk.rs  meta.rs  mod.rs  pack.rs  rfrm.rs  strg.rs  txtr.rs
src/util/: dds.rs  lzss.rs  math_classes.rs  mod.rs
