[package]
name = "retrotool"
description = "Tools for working with Retro game formats."
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/encounter/retrotool"
readme = "README.md"
categories = ["command-line-utilities"]

[profile.release]
lto = "thin"
panic = "abort"
strip = "debuginfo"

[dependencies]
anyhow = "1.0.69"
argh = "0.1.10"
# astc-decode = "0.3.1"
binrw = "0.11.1"
binrw_derive = "0.11.1"
ddsfile = { git = "https://github.com/encounter/ddsfile", rev = "880f04c1dffa680eab0e9e09cfa58591fe186a31" }
env_logger = "0.10.0"
# image = "0.24.5"
log = "0.4.17"
memmap2 = "0.5.8"
tegra_swizzle = "0.3.0"
uuid = "1.3.0"
