[workspace]
members = [
    "lib",
    "retrotool",
    "retrotool-gui",
]
resolver = "2"

[profile.release]
lto = "thin"
panic = "abort"
strip = "debuginfo"

[profile.dev.package]
bevy = { opt-level = 3 }
egui = { opt-level = 3 }
naga = { opt-level = 3 }
wgpu = { opt-level = 3 }
winit = { opt-level = 3 }
