[package]
name = "retrolib"
description = "Tools for working with Retro game formats."
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/PrimeDecomp/retrotool"
readme = "README.md"

[dependencies]
anyhow = "1.0.69"
astc-decode = "0.3.1"
binrw = "0.11.1"
binrw_derive = "0.11.1"
bytemuck = "1.13.1"
ddsfile = { git = "https://github.com/encounter/ddsfile", rev = "880f04c1dffa680eab0e9e09cfa58591fe186a31" }
flate2 = "1.0.25"
image = "0.24.5"
log = "0.4.17"
memmap2 = "0.5.9"
mint = "0.5.9"
tegra_swizzle = "0.3.1"
uuid = "1.3.0"
