[package]
name = "retrotool-gui"
description = "Tools for working with Retro game formats."
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/PrimeDecomp/retrotool"
readme = "README.md"

[features]
default = []
dynamic = ["bevy/dynamic_linking"]
embed = ["bevy_embedded_assets"]

[dependencies]
anyhow = "1.0.69"
astc-decode = "0.3.1"
bevy_egui = "0.20.1"
bevy_embedded_assets = { version = "0.7.0", optional = true }
binrw = "0.11.1"
bit-set = "0.5.3"
bytemuck = "1.13.0"
egui = "0.21.0"
egui_dock = "0.4.0"
half = "2.2.1"
image = "0.24.5"
log = "0.4.17"
num-traits = "0.2.15"
retrolib = { path = "../lib" }
uuid = "1.3.0"
walkdir = "2.3.2"
wgpu-types = "0.15.2"

[dependencies.bevy]
version = "0.10.0"
default-features = false
features = [
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "x11",
    # remove eventually
    "ktx2",
    "tonemapping_luts",
    "zstd",
]
