[package]
name = "retrotool"
description = "Tools for working with Retro game formats."
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/PrimeDecomp/retrotool"
readme = "README.md"
categories = ["command-line-utilities"]

[features]
default = []
nightly = ["half/use-intrinsics"]

[dependencies]
anyhow = "1.0.69"
argh = "0.1.10"
binrw = "0.11.1"
env_logger = "0.10.0"
gltf-json = { version = "1.1.0", features = ["names", "extras"] }
half = { git = "https://github.com/encounter/half-rs", branch = "inline" }
image = "0.24.5"
log = "0.4.17"
png = "0.17.7"
retrolib = { path = "../lib" }
serde_json = "1.0.93"
uuid = "1.3.0"
zerocopy = "0.7.32"
